# dasida

./: requirements.txt  setup.cfg  setup.py
clutter/: scripts.py  utils.py
clutter/aws/: s3.py  secrets.py  sqs.py
clutter/local/: socket.py
clutter/project/: project.py
clutter/random/: random.py
clutter/scripts/: scripts.py
