[metadata]
name = clutter
description = clutter
long_description = file: README.metadata
author = Woojin Cho
author_email = woojin.cho@gmail.com

[options]
python_requires = >=3.8
packages = find:
install_requires = 
    boto3
include_package_data = True

[options.entry_points]
console_scripts =
    # main = mypkg:some_func